Implement marina manager registration page UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="or">or</string>
     <string name="agreeing_with">By creating or logging into an account you are agreeing with our</string>
     <string name="TnC"><u>Terms and Conditions</u></string>
+    <string name="terms_conditions">Terms and Conditions</string>
     <string name="and">and</string>
     <string name="PrivacyStatement"><u>Privacy Statement</u></string>
     <string name="marina_manager">Marina Manager</string>
@@ -19,4 +20,9 @@
     <string name="password">Password</string>
     <string name="show_password">Show Password</string>
     <string name="register">Register</string>
+    <string name="upload">Upload</string>
+    <string name="name">Name</string>
+    <string name="description">Description</string>
+    <string name="location">Location</string>
+    <string name="reception_capacity">Reception\nCapacity</string>
 </resources>
