--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,11 @@
     <string name="description">Description</string>
     <string name="location">Location</string>
     <string name="reception_capacity">Reception\nCapacity</string>
+    <string name="you">You</string>
+    <string name="your_boat">Your Boat</string>
+    <string name="id">ID</string>
+    <string name="length">Length(m)</string>
+    <string name="beam">Beam(m)</string>
+    <string name="type">Type</string>
+    <string name="upload_registration">Upload Registration</string>
 </resources>
