--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="title">NAVISMART</string>
     <string name="app_name">Navismart</string>
     <string name="lets_get_started">Let\'s Get Started</string>
-    <string name="sign_in_with_email">Sign in with email</string>
-    <string name="create_acct">Create your account</string>
-    <string name="or">or</string>
+    <string name="sign_in_with_email">LOGIN</string>
+    <string name="create_acct">CREATE NEW ACCOUNT</string>
+    <string name="or">OR</string>
     <string name="agreeing_with">By creating or logging into an account you are agreeing with our</string>
     <string name="TnC"><u>Terms and Conditions</u></string>
     <string name="terms_conditions">Terms and Conditions</string>
@@ -17,7 +17,7 @@
     <string name="next">Next</string>
     <string name="sign_in">Sign In</string>
     <string name="to">to</string>
-    <string name="email_id">Email ID</string>
+    <string name="email_id">Email</string>
     <string name="password">Password</string>
     <string name="show_password">Show Password</string>
     <string name="register">Register</string>
