--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="sign_in">Sign In</string>
     <string name="to">to</string>
     <string name="email_id">Email</string>
-    <string name="password">Password</string>
+    <string name="password">Password (min 4 characters)</string>
     <string name="show_password">Show Password</string>
     <string name="register">Register</string>
     <string name="upload">Upload</string>
@@ -33,4 +33,7 @@
     <string name="beam">Beam(m)</string>
     <string name="type">Type</string>
     <string name="upload_registration">Upload Registration</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
