--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="beam">Beam(m)</string>
     <string name="type">Type</string>
     <string name="upload_registration">Upload Registration</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
