Add Date Change Dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="show_result">Show Results</string>
     <string name="free_cancellation">Free Cancellation</string>
     <string name="price_range">Price Range</string>
+    <string name="set_date">Set Date</string>
 </resources>
