--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="book">Book</string>
     <string name="facilities">Facilities</string>
     <string name="reviews">Reviews</string>
+    <string name="checkout">Checkout</string>
 </resources>
