--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="review_marina">Review Marina</string>
     <string name="rating">Rating</string>
     <string name="submit_review">Submit Review</string>
+    <string name="add_boat">Add Boat</string>
 </resources>
