Display No results mesaage when necessary in Search Results

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,5 @@
     <string name="boat_ID">Boat ID</string>
     <string name="booking_number">Booking Number</string>
     <string name="profile">Profile</string>
+    <string name="no_results_found">No Results Found</string>
 </resources>
