--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,4 +98,5 @@
     <string name="restaurant">Restaurant</string>
     <string name="dry_port">Dry Port</string>
     <string name="maintenance">Maintenance</string>
+    <string name="see_more_reviews"><u>See more reviews</u></string>
 </resources>
