--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,4 +101,8 @@
     <string name="see_more_reviews"><u>See more reviews</u></string>
     <string name="send_a_message">Send a message</string>
     <string name="type_a_message">Type a message</string>
+    <string name="verify_creds">"Verify your EmailID and password"</string>
+    <string name="verify">Verify</string>
+    <string name="enter_new_email_and_password">Enter new Email and Password</string>
+    <string name="change">Change</string>
 </resources>
