--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,5 @@
     <string name="verify">Verify</string>
     <string name="enter_new_email_and_password">Enter new Email and Password</string>
     <string name="change">Change</string>
+    <string name="no_of_docks">Number of docks needed</string>
 </resources>
