--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,7 +84,7 @@
     <string name="new_reviews">New reviews</string>
     <string name="boat_name">Boat Name</string>
     <string name="boat_ID">Boat ID</string>
-    <string name="booking_number">Booking Number</string>
+    <string name="booking_number">Booking ID</string>
     <string name="profile">Profile</string>
     <string name="no_results_found">No Results Found</string>
     <string name="upload_marina_images_long_press_on_image_to_delete">Upload marina images (Long press to delete)</string>
