Update layout of boater profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,4 +127,6 @@
     <string name="registered_email">Registered Email:</string>
     <string name="delete_all_chats">Delete all chats</string>
     <string name="delete_chat_msg">Do you really want to delete all chats?</string>
+    <string name="logout">logout</string>
+    <string name="boat_type">Boat Type</string>
 </resources>
