--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,5 +133,7 @@
     <string name="no_activity_yet">No activity yet</string>
     <string name="no_of_docks_booked">No. of docks</string>
     <string name="sufficient_docks_unavailable">Sufficient docks unavaialable!</string>
+    <string name="enter_card_details">Enter your card details below</string>
+    <string name="confirm_payment">Confirm Payment</string>
 
 </resources>
