--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,4 +139,5 @@
     <string name="address">Address</string>
     <string name="reject">Reject</string>
     <string name="approve">Approve</string>
+    <string name="contact_us">Contact Us</string>
 </resources>
