--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,4 +140,5 @@
     <string name="reject">Reject</string>
     <string name="approve">Approve</string>
     <string name="contact_us">Contact Us</string>
+    <string name="boat_registration_file_path">Boat registration</string>
 </resources>
