--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,4 +140,6 @@
     <string name="reject">Reject</string>
     <string name="approve">Approve</string>
     <string name="contact_us">Contact Us</string>
+    <string name="reply">Reply</string>
+    <string name="write_reply">Write Reply</string>
 </resources>
