--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,4 +142,5 @@
     <string name="contact_us">Contact Us</string>
     <string name="reply">Reply</string>
     <string name="write_reply">Write Reply</string>
+    <string name="edit_details">Edit Details</string>
 </resources>
